--- a/burgers.html
+++ b/burgers.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
   
+
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2EWH1SG986"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZVXK3V6G3G"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-2EWH1SG986');
+  gtag('config', 'G-ZVXK3V6G3G');
 </script>
+
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
